feat: Criação dos endpoints de inclusão, alteração e exclusão